--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
-env:
-  - SLEEP=30
-  - SLEEP=25
-  - SLEEP=35
-matrix:
-  fast_finish: true
-script: sleep $SLEEP && /bin/false
+script:
+  - uname -a
+  - lsb_release
+  - ./script.sh
+  - env
